--- a/views/admin/shelf_management.ejs
+++ b/views/admin/shelf_management.ejs
@@ -166,7 +166,7 @@
             
             <div class="flex-1 overflow-auto p-4 bg-gray-100 flex items-center justify-center relative cursor-move" id="map-scroll-container">
                 <div id="map-transform-wrapper" class="min-w-[600px] lg:min-w-full transform scale-100 origin-center transition-transform duration-200">
-                    <%- include('partials/shelfMapInteractive', { inputFieldId: null, isPopup: false }) %>
+                    <%- include('partials/shelfMapInteractive', { inputFieldId: null, isPopup: false, layoutJson: typeof layoutJson !== 'undefined' ? layoutJson : null, shelfLocation: query.shelf || '' }) %>
                 </div>
             </div>
         </div>
